--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "currency.js": "^2.0.4",
     "formik": "^2.4.5",
     "fuse.js": "^7.0.0",
+    "html2canvas": "^1.4.1",
     "i18next": "^23.7.11",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.1",
