--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -8,6 +8,7 @@
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
+    "noEmitOnError": false,
     "module": "ESNext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
